fixed divider sticking on wrong position, removed song length badge related code,

--- a/client/src/assets/styles/index.css
+++ b/client/src/assets/styles/index.css
@@ -159,7 +159,7 @@ button {
 
 .sticky-divider {
   position: sticky;
-  top: 96px;
+  top: 149px;
   z-index: 2;
 }
 
@@ -176,8 +176,7 @@ button {
 
 .sticky-button {
   position: sticky;
-  top: 110px;
-
+  top: 80px;
   z-index: 2;
 }
 .category {
